src/styles.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

$primary: #15B7FF;
$light: #15B7FF;
$dark: #252755;
$white: #FAFAFA;
$black: #0F1029;

html,
body {
    background-color: $black !important;
    font-family: 'Inter', sans-serif;
    @apply text-white text-xs bg-black overflow-x-hidden m-0 p-0 min-w-full min-h-full;
}

/* Hide scrollbar for Chrome, Safari and Opera */
.no-scrollbar::-webkit-scrollbar {
    display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.no-scrollbar {
    /* IE and Edge */
    -ms-overflow-style: none;
    /* Firefox */
    scrollbar-width: none;
}

.range {
    &::-webkit-slider-runnable-track {
        @apply bg-black;
    }

    &::-moz-range-track {
        @apply bg-black;
    }
}

button {
    &.disabled {
        opacity: 0.5;
        pointer-events: none;
    }
}

path {
    transform-origin: 50% 0%;
}

.background--custom {
    background-color: $black;
    position: absolute;
    width: 100vw;
    height: 100vh;
    top: 0;
    left: 0;
}

@keyframes path0 {
    0% {
        transform: rotate(-30deg);
    }

    100% {
        transform: rotate(30deg);
    }
}

@keyframes path1 {
    0% {
        transform: rotate(-20deg);
    }

    100% {
        transform: rotate(20deg);
    }
}

@keyframes path2 {
    0% {
        transform: rotate(-20deg);
    }

    100% {
        transform: rotate(20deg);
    }
}

